welcome/students/k8s/lecturer/yaniv/DELL/mdj/ingress/deploy1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-deployment-one
spec:
  selector:
    matchLabels:
      app: canary-app1
  replicas: 1 
  template: 
    metadata:
      labels:
        app: canary-app1
    spec:
      containers:
      - name: canary-one-cont
        image: supergiantkir/animals:bear
        ports:
        - containerPort: 80
