welcome/students/k8s/lecturer/yaniv/DELL/mdj/ingress/deploy2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-deployment-two
spec:
  selector:
    matchLabels:
      app: canary-app2
  replicas: 1 
  template: 
    metadata:
      labels:
        app: canary-app2
    spec:
      containers:
      - name: canary-two-cont
        image: supergiantkir/animals:moose
        ports:
        - containerPort: 80
